<resources>
    <string name="app_name">Mypinkpal</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="imageView">Image</string>
    <string name="not_find_chat_server">Not found chat server</string>
    <string name="app_id">685351784873219</string>
    <string name="google_maps_key">AIzaSyD1QQb5NqXGzxPBUsbeC5AjR8Z9qhoAduc</string>
    <string name="login_facebook">Connecting to Facebook</string>
    <string name="login_facebook_failed">Log in With Facebook failed!</string>
    <string name="no_internet_connection_title">Uh oh, there was a problem</string>
    <string name="no_internet_connection_content">The internet connection appears to be offline.</string>
    <string name="noTitle"></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up for Mypinkpal</string>
    <string name="ok">OK</string>
    <string name="fill_email_pass">Please fill email &amp; password</string>
    <string name="log_out">Log out</string>
    <string name="dashboard">Dashboard</string>
    <string name="message">Message</string>
    <string name="friend">Friend</string>
    <string name="write_message">Write a message &#8230;</string>
    <string name="send">Send</string>
    <string name="compose">Compose</string>
    <string name="new_message">New Message</string>
    <string name="to">To: </string>
    <string name="notification">Notification</string>
    <string name="confirm_request">Confirm</string>
    <string name="not_now">Not Now</string>
    <string name="send_a_message">Send a message</string>
    <string name="view_profile">View Profile</string>
    <string name="all_result_action">All Results</string>
    <string name="member_action">Member</string>
    <string name="search">Search &#8230;</string>
    <string name="post_status">Post Status</string>
    <string name="take_photo">Take New Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="your_wall">On your wall</string>
    <string name="friend_wall">On your friend wall</string>
    <string name="subject">Subject</string>
    <string name="title_activity_profile_pic">Edit Profile Picture</string>
    <string name="upload">Upload</string>
    <string name="choose_picture">Please take new photo or choose from gallery</string>
    <string name="load_previous_comment">Load Previous Comment</string>
    <string name="write_comment">Write a comment &#8230;</string>
    <string name="post_comment">Post</string>
    <string name="title_activity_confirm_request">Confirm Request</string>
    <string name="notice_no_dashboard">There are no new feeds to view at this time</string>
    <string name="second_ago">1 seconds ago</string>
    <string name="share_photo_feed">shared a photo</string>
    <string name="view_all_photo">Recent Photo</string>
    <string name="view_all_photo_click">Touch here to view all photo</string>
    <string name="friend_of_friends">Friend of Friends</string>
    <string name="everyone">Everyone</string>
    <string name="friends">Friends</string>
    <string name="only_me">Only me</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="unlike">Unlike</string>
    <string name="share">Share</string>
    <string name="comments">Comments</string>
    <string name="likes">Likes</string>
    <string name="no_albums">No albums found here</string>
    <string name="basic_info">Basic Info</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="last_login">Last Login</string>
    <string name="member_since">Member Since</string>
    <string name="membership">Membership</string>
    <string name="rss_subcribers">RSS Subscribers</string>
    <string name="shared">shared &#8230;</string>
    <string name="status">Status</string>
    <string name="photo">Photo</string>
    <string name="upload_albums">Upload Album</string>
    <string name="album_name">Name:</string>
    <string name="album_description">Description:</string>
    <string name="album_privacy">Album(s) Privacy:</string>
    <string name="album_privacy_control">Control who can see this photo album and any photos associated with it.</string>
    <string name="album_comment_privacy">Comment Privacy:</string>
    <string name="album_comment_privacy_control">Control who can comment on this photo album and any photos associated with it.</string>
    <string name="title_activity_album_photo">Select an Album</string>
    <string name="album">Album</string>
    <string name="title_activity_create_album_photo">Create a New Photo Album</string>
    <string name="play">Play</string>
    <string name="middot">&#183;</string>
    <string name="send_message">Send a message</string>
    <string name="mutual_friends_text">mutual friends</string>
    <string name="mutual_friend_text">mutual friend</string>
    <string name="add_friend">Add Friend</string>
    <string name="inf_header_label">Let your other friends know about \n Mypinkpal by sending them private invitations</string>
    <string name="inf_select_from_facebook">From Facebook</string>
    <string name="inf_select_from_contacts">From Contacts</string>
    <string name="inf_from_facebook">(invite via Facebook)</string>
    <string name="inf_from_contacts">(invite via Email)</string>
    <string name="inf_send">Send</string>
    <string name="inf_choose_email_provider">Choose an email provider:</string>
    <string name="inf_subject_of_invitation">Mypinkpal</string>
    <string name="inf_body_of_invitation">Dear friend, use Mypinkpal application to reach me!\nDownload it here: http://mypinkpal.com/</string>
    <string name="inf_url_to_facebook_avatar">https://graph.facebook.com/%1$s/picture?type=large</string>
    <string name="inf_fb_wall_param_name">Mypinkpal</string>
    <string name="inf_fb_wall_param_description">Dear friend, use Mypinkpal application to reach me!\nDownload it here: http://mypinkpal.com/</string>
    <string name="inf_fb_wall_param_link">http://mypinkpal.com/</string>
    <string name="inf_fb_wall_param_picture">http://mypinkpal.com/theme/frontend/mypinkpal/style/mypinkpal/image/layout/xlogo.png.pagespeed.ic.7uWEU7sP8z.png</string>
    <string name="inf_fb_wall_param_place">685351784873219</string>
    <string name="inf_fb_request_canceled">Request cancelled</string>
    <string name="dlg_success_request_facebook">Request sent</string>
    <string name="nvd_title_invite_friends">Invite Friends</string>
    <string name="dlg_no_friends_selected">Please, select some Friends for invite!</string>
    <string name="dlg_no_friends">No friends</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="dlg_reply">Reply</string>
    <string name="start_chat">start chat</string>
    <string name="please_wait">Please wait</string>
    <string name="login_by_first_user">Login as the first user</string>
    <string name="login_by_second_user">Login as the second user</string>
    <string name="create_user1">Create first user !!!</string>
    <string name="create_user2">Create second user !!!</string>
    <string name="call_user">call </string>
    <string name="calling_dialog_title">Incoming call</string>
    <string name="calling_dialog_txt">Calling</string>
    <string name="login_screen_title">Login as a User1 on the 1st device and as a User2 on the second device</string>
    <string name="call_start_txt">Call Start</string>
    <string name="call_canceled_txt">Call canceled by caller</string>
    <string name="video_call_txt">VideoCall</string>
    <string name="audio_call_txt">AudioCall</string>
    <string name="error">ERROR</string>
    <string name="user_created">The User have been created</string>
    <string name="session_opened">Session is opened</string>
    <string name="callin_act_text">Many many many text about user or some other stuff youpta!</string>
    <string name="user_not_answer">User hasn’t answered</string>
    <string name="user_reject_call">User is busy</string>
    <string name="user_hang_up_call">User has hung up a call</string>
    <string name="press_again_for_exit">Press again for exit</string>
    <string name="cll_incoming_call_audio">Incoming Call</string>
    <string name="cll_incoming_call_video">Incoming Video Call</string>
    <string name="fdb_support_email">q-municate@quickblox.com</string>
    <string name="fdb_choose_email_provider">Choose an email provider:</string>
    <string name="dlg_wait_please">Please, wait</string>
    <string name="dlg_click_back_again">Please click BACK again to exit</string>
    <string name="dlg_refresh_session">QB Session expired. Update session will be executed now</string>
    <string name="dlg_force_relogin_on_token_required">Token error is occured in application. Relogin will be executed now</string>
    <string name="error_playing_ringtone">Error during playing ringtone</string>
    <string name="dlg_wrong_signaling">Can\'t perform call. Problem with signaling</string>
    <string name="dlg_offline_call"> %1$s is calling you !</string>
    <string name="dlg_microphone_muted">Please, pay attention microphone is muted now</string>
    <string name="videochat_init_fail">Unfortunately, call was closed! It is impossible to initialize multimedia resources on your device</string>
    <string name="dlg_not_all_fields_entered">Please fill all empty input fields</string>
    <string name="dlg_old_password_wrong">Wrong old password</string>
    <string name="nvd_title_chats">Chats</string>
    <string name="dlg_no_chats">Please wait</string>
    <string name="acb_add_chat_title">Add Chat</string>
    <string name="ndl_no_friends_for_new_chat">You don\'t have any Friends for creating New Chat</string>
    <string name="gdd_participants">%1$d participants</string>
    <string name="acb_chat_attach_title">Add attach</string>
    <string name="acb_chat_details_title">Chat details</string>
    <string name="dlg_hint_message">Type a message</string>
    <string name="frd_video_call">Video Call</string>
    <string name="frd_audio_call">Audio Call</string>
    <string name="dlg_user_is_not_friend">User is not your friend</string>
    <string name="frl_dlg_reject_friend">Do you really want to reject contact  request from %1$s?</string>
    <string name="ndl_ac_mode_title">Group chat participants:</string>
    <string name="gdd_online_participants">%1$d/%2$d online</string>
    <string name="dlg_leave_group">Leave Group</string>
    <string name="dlg_confirm">Are you sure?</string>
    <string name="acb_add_friend_to_chat_title">Add friend to Chat</string>
    <string name="acb_leave_chat_title">Leave Chat</string>
    <string name="gdd_all_friends_is_in_group">You can\'t add new friend, because all existing friends are added in this group chat</string>
    <string name="gdd_name_not_entered">Please fill group name</string>
    <string name="push_title">QMUN: Missed messages</string>
    <string name="gdd_title">Group Details</string>
    <string name="instruction">  Enter the words above</string>
    <string name="verify">Verify</string>
    <string name="reload">Reload</string>
    <string name="show_error">Failed to show CAPTCHA</string>
    <string name="verification_success">Your answer is verified successfully</string>
    <string name="verification_failed">You did not enter the CAPTCHA phrase correctly</string>
    <string name="user_was_not_found_in_db">User wasn\'t found in base</string>
</resources>