<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background">

    <Button
        android:id="@+id/loginByFirstUserBtn"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:text="@string/login_by_first_user"
        android:layout_alignLeft="@+id/loginBySecondUserBtn"
        android:layout_alignParentTop="true"
        android:layout_marginTop="99dp"/>

    <Button
        android:id="@+id/loginBySecondUserBtn"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:text="@string/login_by_second_user"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="160dp"/>

    <Button
        android:id="@+id/createUser1"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:text="@string/create_user1"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:visibility="gone" />
    <Button
        android:id="@+id/createUser2"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:text="@string/create_user2"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="310dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/getUser"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:text="GET USER"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="380dp"
        android:visibility="gone" />

    <TextView
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:text="@string/login_screen_title"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:gravity="center"/>
</RelativeLayout>